[package]
name = "request_proxy"
version = "0.1.2"
authors = ["Marcus Ball <marcus.ball@live.com>"]

[dependencies]
hyper = "0.12"
futures = "0.1"
tokio-timer = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.10.0"
reqwest = "0.9.8"
dotenv = "0.13.0"
url = "1.7"
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1"