[package]
authors = ["Marcus Ball <marcus.ball@live.com>"]
edition = "2021"
name = "request_proxy"
version = "0.3.2"

[dependencies]
base64 = "0.21.2"
dotenv = "0.15.0"
failure = "0.1"
futures = "0.3"
hyper = {version = "0.14.26", features = ["server", "tcp", "http1", "http2"]}
rand = "0.8.5"
reqwest = {version = "0.11.18", features = ["json", "rustls-tls-native-roots"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "macros", "time", "io-std", "sync"]}
uuid = {version = "1.3.3", features = ["serde", "v4"]}
void = "1.0.2"
